Fix flex/alignment issues

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .footer {
     border: 2px solid;
     display: flex;
-    padding: 8px 32px;
+    padding: 32px 128px;
 }
 
 .logo, .header-links, /*header*/
@@ -32,6 +32,7 @@ ul {
 
 /* hero */
 .hero > .left {
+    flex: auto;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -43,8 +44,8 @@ ul {
 }
 
 .right {
-    width: 400px;
-    height: 175px;
+    width: 600px;
+    height: 125px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -67,6 +68,9 @@ ul {
 
 .img-content {
     display: flex;
+    justify-content: center;
+    gap: 32px;
+    flex-wrap: wrap;
 }
 
 .item {
@@ -77,6 +81,7 @@ ul {
 }
 
 .caption {
+    width: 160px;
     text-align: center;
 }
 
